--- a/nfc-firebase/functions/package.json
+++ b/nfc-firebase/functions/package.json
@@ -3,7 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase-admin": "~4.1.2",
-    "firebase-functions": "^0.5"
+    "firebase-functions": "^0.5",
+    "md5": "^2.2.1"
   },
   "private": true
 }
